
Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Use usage from context for default contact mechanism on party

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12
* Autocomplete party from European VAT number
* Use vat alias for party identifier
* Add Belgian BIS Number identifier
* Add Belgian National Number identifier
* Add Algerian Tax Number identifier
* Add Egyptian Tax Registration Number identifier
* Add European VAT on e-Commerce - One Stop Shop identifier
* Add Faroese Tax Number identifier
* Add Ghanaian Taxpayer Identification Number identifier
* Add Guinean Tax Number identifier
* Add Indian Voter ID identifier
* Add Indian VAT number identifier
* Add Moroccan Tax Number identifier
* Add Macedonian Tax Number identifier
* Add Pakistani Computerised National Identity Card Number identifier
* Add Portuguese Identity Number identifier
* Add Slovenian Corporate Registration Number identifier
* Add Slovenian Unique Master Citizen Number identifier
* Add Thai Memorandum of Association Number identifier
* Add Thai Personal Identification Number identifier
* Add Thai Taxpayer Identification Number identifier
* Add Tunisian Tax Number identifier

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.7
* Add support for Python 3.11
* Notify for duplicate identifier

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Manage dereferenced name in tax identifier clause of party
* Add optional address to contact mechanism

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Always show country name in English language
* Add fr_siren and fr_siret identifiers
* Add optional address to identifiers
* Add autonomous city as subdivision type for Spain