@@ -623,6 +623,7 @@ IDENTIFIER_TYPES = [
     ('it_codicefiscale', "Italian Tax Code for Individuals"),
     ('it_iva', "Italian VAT Number"),
     ('jp_cn', "Japanese Corporate Number"),
+    ('ke_pin', "Kenya Tax Number"),
     ('kr_brn', "South Korea Business Registration Number"),
     ('kr_krn', "South Korean Resident Registration Number"),
     ('lt_asmens', "Lithuanian Personal Number"),
@@ -632,6 +633,7 @@ IDENTIFIER_TYPES = [
     ('ma_ice', "Moroccan Tax Number"),
     ('mc_tva', "Monacan VAT Number"),
     ('md_idno', "Moldavian Company Identification Number"),
+    ('me_pib', "Montenegro Tax Number"),
     ('mk_edb', "Macedonian Tax Number"),
     ('mt_vat', "Maltese VAT Number"),
     ('mu_nid', "Mauritian National Identifier"),
@@ -664,17 +666,21 @@ IDENTIFIER_TYPES = [
     ('se_orgnr', "Swedish Company Number"),
     ('se_personnummer', "Swedish Personal Number"),
     ('se_vat', "Swedish VAT Number"),
+    ('sg_uen', "Singapore's Unique Entity Number"),
     ('si_businessid', "Slovenian Corporate Registration Number"),
     ('si_ddv', "Slovenian VAT Number"),
     ('si_emso', "Slovenian Unique Master Citizen Number"),
     ('sk_dph', "Slovak VAT Number"),
     ('sk_rc', "Slovak Birth Number"),
     ('sm_coe', "San Marino National Tax Number"),
+    ('sv_nit', "El Salvador Tax Number"),
     ('th_moa', "Thai Memorandum of Association Number"),
     ('th_pin', "Thai Personal Identification Number"),
     ('th_tin', "Thai Taxpayer Identification Number"),
     ('tn_mf', "Tunisian Tax Number"),
+    ('tr_vkn', "Turkish Tax Identification Number"),
     ('tr_tckimlik', "Turkish Personal Identification Number"),
+    ('tw_ubn', "Taiwanese Tax Number"),
     ('ua_edrpou', "Ukrainian Identifier for Enterprises and Organizations"),
     ('ua_rntrc', "Ukrainian Individual Taxpayer Registration Number"),
     ('us_atin', "U.S. Adoption Taxpayer Identification Number"),
@@ -735,6 +741,7 @@ TAX_IDENTIFIER_TYPES = [
     'is_vsk',
     'it_iva',
     'jp_cn',
+    'ke_pin',
     'kr_brn',
     'lt_pvm',
     'lu_tva',
@@ -742,6 +749,7 @@ TAX_IDENTIFIER_TYPES = [
     'ma_ice',
     'mc_tva',
     'md_idno',
+    'me_pib',
     'mk_edb',
     'mt_vat',
     'mx_rfc',
@@ -756,11 +764,16 @@ TAX_IDENTIFIER_TYPES = [
     'rs_pib',
     'ru_inn',
     'se_vat',
+    'sg_uen',
     'si_ddv',
     'sk_dph',
     'sm_coe',
+    'sv_nit',
     'th_tin',
     'tn_mf',
+    'tr_vkn',
+    'tr_vkn',
+    'tw_ubn',
     'ua_edrpou',
     'ua_rntrc',
     'us_atin',
