@@ -1,3 +1,9 @@
+* Add Taiwanese Tax Number identifier
+* Add Turkish tax identification number identifier
+* Add El Salvador Tax Number identifier
+* Add Singapore's Unique Entity Number identifier
+* Add Montenegro Tax Number identifier
+* Add Kenya Tax Number identifier
 
 Version 7.2.0 - 2024-04-29
 --------------------------
